trying before pair programming

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>GETTING TO KNOW RORY</h1>
     </header>
     <main>
-      <h2>Welcome to my 'About Me' page</h2>
+          <h2>Welcome to my 'About Me' page</h2>
       <img class="rorypic" src="./rory pic.jpg" alt="Pic of Rory" />
       <h2>This is my face</h2>
       <h3>
@@ -69,6 +69,24 @@
           </ul>
         </p>
       </h3>
+      <h3>
+        My Top 10 words
+        <p>
+          Samuel Johnson once wrote "If you are tired of London you are tired of Life".  In that case I'm bloody knackered.  However he also wrote the first ever dictionary, which must have been a right old pain.  So in Sam's honour here are some of my favourite words today . . . 
+          <ol>
+            <li>Crash</li>
+            <li>Bang</li>
+            <li>Bonce</li>
+            <li>Midas</li>
+            <li>Smelt</li>
+            <li>Cracker</li>
+            <li>Nuance</li>
+            <li>Bosh</li>
+            <li>Wallop</li>
+            <li>Filth</li>
+          </ol>
+        </p>
+      </h3>
       <h3 class="gameshead">
         Fun games to play
       </h3> 
@@ -76,6 +94,8 @@
         <button id="btn1" onclick="mybtn1()">Guess my weight</button>
         <button id="btn2" onclick="mybtn2()">Take the quiz</button>
       </div>
+      
+      <h3>
       
     </main>
     <footer>
